# alternator-client-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  THIRD_PARTY_NOTICES.md
.github/: release.yml
.github/workflows/: tests.yml
cmake/: RequireGTestTests.cmake  scylladb-alternator-client-cpp-config.cmake.in
examples/: basic.cpp
include/scylladb/alternator/: attribute_value.h  config.h  http_client.h  key_route_affinity.h  live_nodes.h  murmur3.h  node_health.h  query_plan.h  routing_scope.h  uri.h
include/scylladb/alternator/aws/: dynamodb_helper.h
include/scylladb/alternator/detail/: go_random.h
src/: attribute_value.cpp  aws_dynamodb_helper.cpp  config.cpp  go_random.cpp  http_client.cpp  http_compression.cpp  http_compression.h  key_route_affinity.cpp  live_nodes.cpp  murmur3.cpp  node_health.cpp  query_plan.cpp  routing_scope.cpp  uri.cpp
test/: docker-compose.yml
test/scylla/: scylla.yaml
tests/: attribute_value_test.cpp  aws_dynamodb_helper_test.cpp  aws_integration_test.cpp  config_test.cpp  header_optimization_test.cpp  http_client_test.cpp  key_route_affinity_test.cpp  live_nodes_integration_test.cpp  live_nodes_test.cpp  node_health_test.cpp  query_plan_test.cpp  routing_scope_test.cpp
